Внедряем архитектуру feature-sliced в проект. Создаем папки, модули. Перемещаем все по местам. Фиксим импорт

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,13 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "./src/*"
+            ]
+        }
     },
     "ts-node": {
         "compilerOptions": {
