Добавляю тестирование ui в pipeline

--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -22,4 +22,8 @@ jobs:
       - name: linting scss
         run: npm run lint:scss
       - name: unit testing
-        run: npm run test:unit
+        run: npm run test:unit	    
+      - name: build storybook
+        run: npm run storybook:build
+      - name: screen testing
+        run: npm run test:ui:ci
