--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -19,11 +19,16 @@ jobs:
         run: npm run build:prod
       - name: linting ts
         run: npm run lint:ts
+        if: always()
       - name: linting scss
         run: npm run lint:scss
+        if: always()
       - name: unit testing
-        run: npm run test:unit	    
+        run: npm run test:unit
+        if: always()	    
       - name: build storybook
         run: npm run storybook:build
+        if: always()
       - name: screen testing
         run: npm run test:ui:ci
+        if: always()
