--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --open --env port=3000",
+    "start:devback": "node ./json-server/index.js",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
@@ -64,6 +65,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "json-server": "^0.17.3",
     "mini-css-extract-plugin": "^2.7.6",
     "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.11",
