Строгая типизация TS, Создание сервиса получения данных

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "esModuleInterop": true,
         "jsx": "react-jsx",
         "baseUrl": ".",
+        "strict": true,
         "paths": {
             "*": [
                 "./src/*"
