--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "start": "webpack serve --open --env port=3000",
+    "start:dev": "concurrently \"npm start\" \"npm run start:devback\"",
     "start:devback": "node ./json-server/index.js",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
@@ -88,6 +89,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "concurrently": "^8.2.0",
     "i18next": "^23.2.11",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
