--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack --env mode=development",
-    "build:prod": "webpack --env mode=production",
+    "build:prod": "webpack --env mode=production apiUrl=https://skuld-news-backend.vercel.app",
     "start": "webpack serve --open --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:devback\"",
     "start:devback": "node ./json-server/index.js",
@@ -53,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
