--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
+    "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.3",
     "mini-css-extract-plugin": "^2.7.6",
     "reg-cli": "^0.17.7",
