--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.9",
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/plugin-transform-typescript": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@storybook/addon-essentials": "^7.1.0",
@@ -70,6 +72,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-ulbi-tv-plugin": "^0.0.1",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
