--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build:prod": "webpack --env mode=production apiUrl=https://skuld-news-backend.vercel.app",
     "start": "webpack serve --open --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:devback\"",
+    "start:vite": "vite",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:devback\"",
     "start:devback": "node ./json-server/index.js",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
@@ -58,6 +60,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "@vitejs/plugin-react": "^4.0.4",
     "babel-loader": "^9.1.3",
     "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^11.0.0",
@@ -94,6 +97,7 @@
     "ts-morph": "^19.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "vite-plugin-svgr": "^3.2.0",
     "webpack": "^5.88.1",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
