--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -33,9 +33,12 @@ jobs:
       - name: screen testing
         if: always()
         run: npm run test:ui:ci
-      - name: Generate unit HTML report
+      - name: Generate loki HTML report
         if: always()
         run: npm run test:ui:report
+      - name: move loki report
+        run: mv .loki reports/
+        if: always()
       - name: Setup Pages
         if: always()
         uses: actions/configure-pages@v2
@@ -43,12 +46,12 @@ jobs:
         if: always()
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.loki'
+          path: 'reports'
       - name: Deploy to GitHub Pages
         id: deployment
         if: always()
         uses: actions/deploy-pages@v1
-        
+
   checks:
     runs-on: ubuntu-latest
     strategy:
