--- a/.github/workflows/lint-test-build.yml
+++ b/.github/workflows/lint-test-build.yml
@@ -12,7 +12,7 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 jobs:
-  buil-and-ui-testing:
+  build-and-ui-testing:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,6 +33,9 @@ jobs:
       - name: screen testing
         if: always()
         run: npm run test:ui:ci
+      - name: unit testing
+        if: always()
+        run: npm run test:unit
       - name: Generate loki HTML report
         if: always()
         run: npm run test:ui:report
