--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:e2e": "cypress open",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
@@ -66,6 +67,7 @@
     "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "cypress": "^12.17.4",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-i18next": "^5.2.1",
@@ -122,8 +124,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.1",
-    "react-virtualized": "^9.22.5"
+    "react-router-dom": "^6.14.1"
   },
   "loki": {
     "configurations": {
